--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  birthdate: 
+  birthdate: 2020-06-10
   info: MyText
 
 two:
   name: MyString
-  birthdate: 
+  birthdate: 2020-06-10
   info: MyText
